# clasplint

./: .gitignore  CLASP-3.1.1.md  CLASP-3.1.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
CLASPLint/: __init__.py  __main__.py  comment_checker.py  dict_key_checker.py  docstring_checker.py  function_checker.py  log_checker.py  naming_utils.py  reporter.py  runner.py  variable_checker.py
